[package]
name = "unix-clock"
version = "0.1.0"
edition = "2018"

[package.metadata]
msrv = "1.40.0"

[features]
default = []
std = ["linux-syscalls/std"]
libc-compat = ["linux-syscalls/libc-compat"]

[target.'cfg(target_os = "linux")'.dependencies]
linux-syscalls = { version = "0.1.4", default-features = false }
cfg-if = "1.0.0"

[target.'cfg(all(unix, not(target_os = "linux")))'.dependencies]
libc = "0.2.147"

[target.'cfg(any(target_os = "macos", target_os = "ios", target_os = "watchos", target_os = "tvos"))'.dependencies]
apple-errnos = "0.1.1"
