[package]
name = "unix-clock"
version = "0.1.0"
edition = "2021"
rust-version = "1.63.0"

[features]
default = []
std = ["linux-syscalls/std"]
libc-compat = ["linux-syscalls/libc-compat"]

[build-dependencies]
bindgen = "0.66.1"

[target.'cfg(target_os = "linux")'.dependencies]
linux-syscalls = { version = "0.3.1", default-features = false }
linux-raw-sys = "0.4.3"
cfg-if = "1.0.0"

[target.'cfg(all(unix, not(target_os = "linux")))'.dependencies]
libc = "0.2.147"

[target.'cfg(any(target_os = "macos", target_os = "ios", target_os = "watchos", target_os = "tvos", target_os = "freebsd", target_os = "dragonfly", target_os = "netbsd", target_os = "openbsd"))'.dependencies]
bsd-errnos = { git = "https://github.com/shurizzle/bsd-errnos" }
